Добавлены иконки для кнопок Изменила размеры пульта Работа с отступами

--- a/index.html
+++ b/index.html
@@ -13,13 +13,28 @@
         <div class="main-top"></div>
         <div class="main-bottom">
             <div class="main-bottom-column main-bottom-column--left">
-                <button class="button"></button>
-                <button class="button"></button>
-                <button class="button"></button>
+                <button class="button">
+                    <img src="accets/icons/arrow_left.png">
+                </button>
+                <button class="button">
+                    <img src="accets/icons/search.png">
+                </button>
+                <button class="button button--last">
+                    <img src="accets/icons/setting.png">
+                </button>
             </div>
             <div class="main-bottom-column main-bottom-column--right">
-                <button class="button"></button>
-                <button class="button button--large"></button>
+                <button class="button">
+                    <img src="accets/icons/voice.png">
+                </button>
+                <div class="button-double">
+                    <button class="button ">
+                        <img src="accets/icons/volume_up.png">
+                    </button>
+                    <button class="button button--last">
+                        <img src="accets/icons/volume_down.png">
+                    </button>
+                </div>
             </div>
         </div>
 
