Добавление кнопок для верхней части пульта Стилизация верхней части пульта Закончила стилизацию пульта

--- a/index.html
+++ b/index.html
@@ -10,7 +10,30 @@
 </head>
 <body>
     <div class="main">
-        <div class="main-top"></div>
+        <div class="main-top">
+            <button class="button-off"></button>
+            <div class="main-top-control">
+                <div class="main-bottom-row main-bottom-row--center">
+                    <button class="button-arrow">
+                        <div class="button-arrow-icon-top"></div>
+                    </button>
+                </div>
+                <div class="main-bottom-row">
+                    <button class="button-arrow">
+                        <div class="button-arrow-icon-left"></div>
+                    </button>
+                    <button class="button-text">OK</button>
+                    <button class="button-arrow">
+                        <div class="button-arrow-icon-right"></div>
+                    </button>
+                </div>
+                <div class="main-bottom-row main-bottom-row--center">
+                    <button class="button-arrow">
+                        <div class="button-arrow-icon-bottom"></div>
+                    </button>
+                </div>
+            </div>
+        </div>
         <div class="main-bottom">
             <div class="main-bottom-column main-bottom-column--left">
                 <button class="button">
