Поменяла фон Сделала фон изменила расположение пульта Стилизация элементов

--- a/index.html
+++ b/index.html
@@ -9,58 +9,62 @@
     <link href="accets/style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="main">
-        <div class="main-top">
-            <button class="button-off"></button>
-            <div class="main-top-control">
-                <div class="main-bottom-row main-bottom-row--center">
-                    <button class="button-arrow">
-                        <div class="button-arrow-icon-top"></div>
-                    </button>
-                </div>
-                <div class="main-bottom-row">
-                    <button class="button-arrow">
-                        <div class="button-arrow-icon-left"></div>
-                    </button>
-                    <button class="button-text">OK</button>
-                    <button class="button-arrow">
-                        <div class="button-arrow-icon-right"></div>
-                    </button>
-                </div>
-                <div class="main-bottom-row main-bottom-row--center">
-                    <button class="button-arrow">
-                        <div class="button-arrow-icon-bottom"></div>
-                    </button>
+    <div class="view">
+        <div class="view-circle">
+            <div class="main">
+            <div class="main-top">
+                <button class="button-off"></button>
+                <div class="main-top-control">
+                    <div class="main-bottom-row main-bottom-row--center">
+                        <button class="button-arrow">
+                            <div class="button-arrow-icon-top"></div>
+                        </button>
+                    </div>
+                    <div class="main-bottom-row">
+                        <button class="button-arrow">
+                            <div class="button-arrow-icon-left"></div>
+                        </button>
+                        <button class="button-text">OK</button>
+                        <button class="button-arrow">
+                            <div class="button-arrow-icon-right"></div>
+                        </button>
+                    </div>
+                    <div class="main-bottom-row main-bottom-row--center">
+                        <button class="button-arrow">
+                            <div class="button-arrow-icon-bottom"></div>
+                        </button>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="main-bottom">
-            <div class="main-bottom-column main-bottom-column--left">
-                <button class="button">
-                    <img src="accets/icons/arrow_left.png">
-                </button>
-                <button class="button">
-                    <img src="accets/icons/search.png">
-                </button>
-                <button class="button button--last">
-                    <img src="accets/icons/setting.png">
-                </button>
-            </div>
-            <div class="main-bottom-column main-bottom-column--right">
-                <button class="button">
-                    <img src="accets/icons/voice.png">
-                </button>
-                <div class="button-double">
-                    <button class="button ">
-                        <img src="accets/icons/volume_up.png">
+            <div class="main-bottom">
+                <div class="main-bottom-column main-bottom-column--left">
+                    <button class="button">
+                        <img src="accets/icons/arrow_left.png">
+                    </button>
+                    <button class="button">
+                        <img src="accets/icons/search.png">
                     </button>
                     <button class="button button--last">
-                        <img src="accets/icons/volume_down.png">
+                        <img src="accets/icons/setting.png">
                     </button>
                 </div>
+                <div class="main-bottom-column main-bottom-column--right">
+                    <button class="button">
+                        <img src="accets/icons/voice.png">
+                    </button>
+                    <div class="button-double">
+                        <button class="button ">
+                            <img src="accets/icons/volume_up.png">
+                        </button>
+                        <button class="button button--last">
+                            <img src="accets/icons/volume_down.png">
+                        </button>
+                    </div>
+                </div>
             </div>
-        </div>
 
+        </div>
+        </div>
     </div>
 <script src="accets/scrpt.js"></script>
 </body>
