Сделала анимацию для кнопок Добавила эффекты для кнопок

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <div class="main-top">
                 <button class="button-off"></button>
                 <div class="main-top-control">
-                    <div class="main-bottom-row main-bottom-row--center">
+                    <div class="main-top-row main-top-row--center">
                         <button class="button-arrow">
                             <div class="button-arrow-icon-top"></div>
                         </button>
                     </div>
-                    <div class="main-bottom-row">
+                    <div class="main-top-row">
                         <button class="button-arrow">
                             <div class="button-arrow-icon-left"></div>
                         </button>
@@ -29,7 +29,7 @@
                             <div class="button-arrow-icon-right"></div>
                         </button>
                     </div>
-                    <div class="main-bottom-row main-bottom-row--center">
+                    <div class="main-top-row main-top-row--center">
                         <button class="button-arrow">
                             <div class="button-arrow-icon-bottom"></div>
                         </button>
