--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
         <div class="view-circle">
             <div class="main">
             <div class="main-top">
-                <button class="button-off"></button>
+                <button id="btn-power" class="button-off"></button>
                 <div class="main-top-control">
                     <div class="main-top-row main-top-row--center">
-                        <button class="button-arrow">
+                        <button id="btn-arrow-top" class="button-arrow">
                             <div class="button-arrow-icon-top"></div>
                         </button>
                     </div>
                     <div class="main-top-row">
-                        <button class="button-arrow">
+                        <button id="btn-arrow-left" class="button-arrow">
                             <div class="button-arrow-icon-left"></div>
                         </button>
-                        <button class="button-text">OK</button>
-                        <button class="button-arrow">
+                        <button id="btn-center" class="button-text">OK</button>
+                        <button id="btn-arrow-right" class="button-arrow">
                             <div class="button-arrow-icon-right"></div>
                         </button>
                     </div>
                     <div class="main-top-row main-top-row--center">
-                        <button class="button-arrow">
+                        <button id="btn-arrow-bottom" class="button-arrow">
                             <div class="button-arrow-icon-bottom"></div>
                         </button>
                     </div>
@@ -38,25 +38,25 @@
             </div>
             <div class="main-bottom">
                 <div class="main-bottom-column main-bottom-column--left">
-                    <button class="button">
+                    <button id="btn-main-back" class="button">
                         <img src="accets/icons/arrow_left.png">
                     </button>
-                    <button class="button">
+                    <button id="btn-main-search" class="button">
                         <img src="accets/icons/search.png">
                     </button>
-                    <button class="button button--last">
+                    <button id="btn-main-setting" class="button button--last">
                         <img src="accets/icons/setting.png">
                     </button>
                 </div>
                 <div class="main-bottom-column main-bottom-column--right">
-                    <button class="button">
+                    <button id="btn-main-voice" class="button">
                         <img src="accets/icons/voice.png">
                     </button>
                     <div class="button-double">
-                        <button class="button ">
+                        <button id="btn-main-turnup" class="button ">
                             <img src="accets/icons/volume_up.png">
                         </button>
-                        <button class="button button--last">
+                        <button id="btn-main-turndown" class="button button--last">
                             <img src="accets/icons/volume_down.png">
                         </button>
                     </div>
