Реализовала изменение фона и подложки при клике на кнопки

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="accets/style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="view">
-        <div class="view-circle">
+    <div id="view" class="view">
+        <div id="view-circle" class="view-circle">
             <div class="main">
             <div class="main-top">
                 <button id="btn-power" class="button-off"></button>
