- Сверстала блок с громкостью - сделала функцию для работы с индикатором громкости -реализовала функцию для прибавления/уменьшения и сброса громкости

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     </button>
                 </div>
                 <div class="main-bottom-column main-bottom-column--right">
-                    <button id="btn-main-voice" class="button">
-                        <img src="accets/icons/voice.png">
+                    <button id="btn-main-volume-off" class="button">
+                        <img src="accets/icons/volume_off.png">
                     </button>
                     <div class="button-double">
                         <button id="btn-main-turnup" class="button ">
@@ -64,6 +64,11 @@
             </div>
 
         </div>
+        </div>
+        <div class="view-controls">
+            <div id="volume" class="view-controls-volume">
+                <div id="volume-bar" class="view-controls-volume-bar"></div>
+            </div>
         </div>
     </div>
 <script src="accets/scrpt.js"></script>
