--- a/index.html
+++ b/index.html
@@ -65,9 +65,19 @@
 
         </div>
         </div>
-        <div class="view-controls">
+        <div id="view-controls" class="view-controls">
             <div id="volume" class="view-controls-volume">
                 <div id="volume-bar" class="view-controls-volume-bar"></div>
+            </div>
+        </div>
+        <div class="view-menu">
+            <div class="view-menu-item">
+                <div class="view-menu-item-text">Размер пульта</div>
+                <div class="view-menu-item-value">1</div>
+            </div>
+            <div class="view-menu-item">
+                <div class="view-menu-item-text">Размер подложки</div>
+                <div class="view-menu-item-value">1</div>
             </div>
         </div>
     </div>
