Refactoring code to react. Implemented layout.

--- a/index.html
+++ b/index.html
@@ -70,14 +70,34 @@
                 <div id="volume-bar" class="view-controls-volume-bar"></div>
             </div>
         </div>
-        <div class="view-menu">
+        <div id="view-menu" class="view-menu">
             <div class="view-menu-item">
                 <div class="view-menu-item-text">Размер пульта</div>
-                <div class="view-menu-item-value">1</div>
+                <div class="view-menu-item-panel">
+                    <div class="button-double button-double--small">
+                        <button id="btn-menu-view-size-down" class="button ">
+                            <div class="button-label">-</div>
+                        </button>
+                        <button id="btn-menu-view-size-up" class="button button--last">
+                            <div class="button-label">+</div>
+                        </button>
+                    </div>
+                    <div class="view-menu-item-value">1.25</div>
+                </div>
             </div>
             <div class="view-menu-item">
                 <div class="view-menu-item-text">Размер подложки</div>
-                <div class="view-menu-item-value">1</div>
+                <div class="view-menu-item-panel">
+                    <div class="button-double button-double--small">
+                        <button id="btn-menu-circle-size-down" class="button ">
+                            <div class="button-label">-</div>
+                        </button>
+                        <button id="btn-menu-circle-size-up" class="button button--last">
+                            <div class="button-label">+</div>
+                        </button>
+                    </div>
+                    <div class="view-menu-item-value">1.25</div>
+                </div>
             </div>
         </div>
     </div>
